fixed background bug on small height viewports

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ p {
 .container {
     background-color: hsl(212, 45%, 89%);
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
